spacing fixes

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -239,8 +239,7 @@ nav #nav-ul {
         cursor: pointer;
         @extend .no-select;
     }
-
-    .dropdown-content {
+    .dropdown-content, .subdropdown-content {
         visibility: hidden;
         //color: $dark;
         //font-size: 17px;
@@ -374,7 +373,6 @@ nav #nav-ul {
                     transform: translate(0, 0);
                     opacity: 1;
                     max-height: 100%;
-                    margin-top: 23px;
                 }
             }
         }
@@ -461,7 +459,6 @@ nav #nav-ul {
     transition: 0.5s ease-in-out;
     border: none;
     //border-bottom: solid $main 1px;
-    margin: 0 0.8vw;
     cursor: pointer;
     background-color: inherit;
     //height: 100%;
